# wr-profiles

./: .bumpversion.cfg  .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: README.md  README.rst
tests/: test_delegate_profile.py  test_frozen_profile_with_const_values.py  test_profile_delegate.py  test_profiles_matrix.py  test_serializers.py  test_simple_profile.py  test_v4y.py  test_warehouse_profile.py  test_wr_profiles.py
wr_profiles/: __init__.py  base.py  envvar_profile.py  profile.py  props.py  todo.py
