[tool.poetry]
name = "wr-profiles"
version = "2.1.0"
description = "Switch environment variable based profiles in Python with ease"
authors = ["Jazeps Basko <jazeps.basko@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.6"

[tool.poetry.dev-dependencies]
pytest-random-order = "^0.8.0"
pytest = "^3.7"
bumpversion = "0.5.3"
coverage = "^4.5"
flake8 = "^3.5"
isort = "^4.3"

[tool.black]
line-length = 88
py36 = true

