[tool.poetry]
name = "wr-profiles"
version = "2.2.2"
description = "Switch environment variable based profiles in Python with ease"
authors = ["Jazeps Basko <jazeps.basko@gmail.com>"]
license = "MIT"
repository = "https://github.com/jbasko/wr-profiles"
homepage = "https://github.com/jbasko/wr-profiles"
keywords = ["environment-variables", "configuration", "environment", "profile"]
readme = "docs/README.rst"

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest-random-order = "^0.8.0"
pytest = "^3.7"
coverage = "^4.5"
flake8 = "^3.5"
isort = "^4.3"
black = "^18.3-alpha.0"
pygments = "^2.2"

[tool.black]
line-length = 88
py36 = true
